# xpctl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: auto-release.yml  ci.yml  docs.yml  release.yml
docs/: cli.md  getting-started.md  index.md  releasing.md
scripts/: release.py  release_info.py
src/xpctl/: __about__.py  __init__.py  __main__.py  cli.py  client.py  config.py  debuggers.py  deploy.py  protocol.py  resources.py
src/xpctl/assets/: agent.py  bootstrap_xpctl.bat
src/xpctl/assets/installers/: __init__.py
src/xpctl/assets/scripts/: __init__.py  checksum.py  dll_inject.py  file_delete.py  file_list.py  file_stat.py  find.py  gui_screenshot.py  gui_sendkeys.py  gui_window_list.py  head.py  mem_read.py  memdump.py  run_python_json.py  run_python_wrapper.py  tail.py
src/xpctl/cli/: __init__.py  admin.py  debug.py  exec.py  files.py  reverse.py  support.py  system.py
src/xpctl/templates/: __init__.py  bootstrap_agent.py.j2  extract_installer.py.j2  install_startup.py.j2  remove_startup.py.j2  start_agent.bat.j2  startup_status.py.j2  stop_agent.bat.j2
src/xpctl/transport/: __init__.py  base.py  factory.py  ssh.py  tcp.py
src/xpctl/transport/ssh_support/: __init__.py  bat.py  install.py  python.py  sftp.py  shell.py  translation.py
tests/: test_bootstrap_bundle.py  test_cli.py  test_client.py  test_configure.py  test_deploy.py  test_protocol.py  test_resources.py  test_ssh_transport.py  test_transport_tcp.py
