[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "xpctl"
dynamic = ["version"]
description = "Windows XP remote management toolkit with SSH and agent transports."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "Nick Ficano", email = "nficano@gmail.com" },
]
keywords = ["windows-xp", "ssh", "debugging", "reverse-engineering", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Debuggers",
  "Topic :: System :: Systems Administration",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.1,<9",
  "jinja2>=3.1,<4",
  "paramiko>=3.4,<4",
  "rich>=13.7,<14",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pre-commit>=4.0",
  "pydoclint>=0.5",
  "pyright>=1.1",
  "pytest>=8.3",
  "ruff>=0.9.0,<1.0",
  "twine>=6.1",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
]

[project.scripts]
xpctl = "xpctl.cli:main"

[project.urls]
Documentation = "https://nficano.github.io/xpctl/"
Issues = "https://github.com/nficano/xpctl/issues"
Repository = "https://github.com/nficano/xpctl"
Changelog = "https://github.com/nficano/xpctl/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/xpctl/__about__.py"

[tool.hatch.build]
exclude = [
  ".venv/",
  ".venv-*/",
  "artifacts/",
  "build/",
  "dist/",
  "site/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xpctl"]

[tool.hatch.build.targets.wheel.force-include]
"installs/python-3.4.10.zip" = "xpctl/assets/installers/python-3.4.10.zip"
"installs/setup-x86-2.874.exe" = "xpctl/assets/installers/setup-x86-2.874.exe"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests", "scripts"]
extend-exclude = [
  "src/xpctl/assets/agent.py",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "W",    # pycodestyle warnings
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "RUF",  # ruff-specific rules
  "D",    # pydocstyle
]
ignore = [
  "B008",   # do not perform function calls in argument defaults (Click uses this)
  "E501",   # line too long (handled by formatter)
  "D100",   # missing docstring in public module (too noisy for CLI modules)
  "D104",   # missing docstring in public package
  "D105",   # missing docstring in magic method
  "D107",   # missing docstring in __init__ (covered by class docstring)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"scripts/**" = ["D"]
"src/xpctl/assets/**" = ["D", "RUF012"]
"src/xpctl/cli/*.py" = ["D101", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"
reportMissingImports = "none"
reportMissingModuleSource = "none"
include = ["src"]
exclude = ["src/xpctl/assets/agent.py"]
